<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/back_gray" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/movie_details"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/txt_title"
        android:id="@+id/view1">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="8dp"
        android:text="@string/movie_name"
        android:textStyle="bold"
        android:id="@+id/movieNameTxt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieNameTxt"
        android:layout_marginLeft="8dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/movieNameText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/movieNameTxt"
        android:id="@+id/descTxt"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/descTxt"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreLabel"
        android:layout_below="@+id/view1"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:layout_alignParentRight="true"
        android:text="@string/score" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/scoreLabel"
        android:id="@+id/score"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginLeft="8dp"
        android:id="@+id/actorsTxt"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/actors"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/actorsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actorsTxt" />

</RelativeLayout>