<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.example.sbohr002.myapplication.ui.MoviesActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/movieListContainer">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:text="@string/movie_name"
        android:textStyle="bold"
        android:id="@+id/movieNameText"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/movie"
        android:id="@+id/view">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:text="@string/movies"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:id="@+id/movie"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:id="@+id/lastupdatedTxt"
        android:textStyle="bold"
        android:text="@string/last_updated"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/moviesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"/>
    </RelativeLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"></FrameLayout>

</RelativeLayout>